Replace anonymous JWT auth with passkeys